# sway

./: meson.build
systemd/: 10-systemd  meson.build  sway.service.in
